<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="usil.proyecto.alarmatemprana.MainActivity" >

    <item
        android:id="@+id/news_setting"
        android:orderInCategory="100"
        android:title="@string/news_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/recommendations_setting"
        android:orderInCategory="101"
        android:title="@string/recommendations_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/directory_setting"
        android:orderInCategory="102"
        android:title="@string/directory_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/evacuation_zones_setting"
        android:orderInCategory="103"
        android:title="@string/evacuation_zone_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/flashlight_setting"
        android:orderInCategory="104"
        android:title="@string/flashlight_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/evacuation_routes_setting"
        android:orderInCategory="105"
        android:title="@string/evacuation_routes_string"
        app:showAsAction="never"/>

</menu>
