<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
        <TextView 
            android:id="@+id/tv_login_Title"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:text="@string/app_title"
            android:textSize="20sp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center">
        
        <ImageView 
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="1">
		        <EditText 
		            android:id="@+id/et_username"
		            android:hint="@string/username_hint"
		            android:layout_weight="0.9"
		            android:layout_width="0dp"
		            android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">
        <LinearLayout
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center"
           android:weightSum="1">
	        <EditText 
	            android:id="@+id/et_password"
	            android:hint="@string/password_hint"
	            android:inputType="textPassword"
	            android:layout_weight="0.9"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"/>
     	</LinearLayout>
     </LinearLayout>
     <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
     
         <Button 
             android:id="@+id/btn_login"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.3"
             android:text="Sign in"/>
     </LinearLayout>
     <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">
     
         <Button 
             android:id="@+id/btn_register"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.4"
             android:text="Registrate"/>
     </LinearLayout>
    

</LinearLayout>
